[package]
name = "libsodium-rs"
version = "0.2.1"
edition = "2021"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "A comprehensive, idiomatic Rust wrapper for libsodium, providing a safe and ergonomic API for cryptographic operations"
license = "MIT"
repository = "https://github.com/jedisct1/libsodium-rs"
documentation = "https://docs.rs/libsodium-rs"
homepage = "https://github.com/jedisct1/libsodium-rs"
readme = "README.md"
keywords = ["crypto", "sodium", "libsodium", "encryption", "cryptography"]
categories = ["cryptography", "external-ffi-bindings", "api-bindings"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
rust-version = "1.60.0"

[dependencies]
libsodium-sys-stable = { git = "https://github.com/jedisct1/libsodium-sys-stable", rev = "329e7191e61803d6261d061d7b7939cff1d93173" }
thiserror = "2.0.17"
ctor = "0.6.1"
libc = "0.2"
ct-codecs = "1.1.6"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[build-dependencies]
pkg-config = "0.3"

[features]
default = []
# Enable this feature if you want to use the latest stable version of libsodium
fetch-latest = ["libsodium-sys-stable/fetch-latest"]
# Enable optimized build for the current platform
optimized = ["libsodium-sys-stable/optimized"]
# Do not build deprecated APIs
minimal = ["libsodium-sys-stable/minimal"]

[package.metadata.docs.rs]
all-features = false
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
benchmark-simple = "0.1.10"
